fix horizontal scrolling

--- a/source/styles/blocks/additional-products.scss
+++ b/source/styles/blocks/additional-products.scss
@@ -48,7 +48,7 @@
 		content: " ";
 		display: block;
 		position: absolute;
-		width: var(--divided-width, 200vw);
+		width: var(--divided-width, 190vw);
 		height: 2px;
 		background-color: #68b738;
 		box-shadow: 50vw 0 0 0 #68b738;
